# champi-tts

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  SETUP_COMPLETE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs.md  feature_request.md  performance.md
.github/workflows/: benchmarks.yml  ci.yml  dependency-review.yml  docs.yml  pre-commit.yml  release-validation.yml  release.yml
BRANCH_CLEANUP_SUMMARY/: index.html
COMPLETE_PROGRESS_SUMMARY/: index.html
FINAL_PROGRESS_SUMMARY/: index.html
FINAL_SUMMARY/: index.html
PROGRESS_REVIEW/: index.html
PROGRESS_REVIEW_FINAL/: index.html
PROGRESS_SUMMARY_SEC/: index.html
RELEASE_COMPLETE/: index.html
RELEASE_NOTES/: index.html
REPOSITORY_STATUS/: index.html
SECURITY_AUDIT/: index.html
TROUBLESHOOTING/: index.html
TUTORIALS/: index.html
USER_GUIDE/: index.html
api/: index.html
benchmarks/: bench_imports.py  bench_reader.py  bench_synthesis.py  conftest.py
developer/contributing/: index.html
docs/: BENCHMARKING.md  BRANCH_CLEANUP_SUMMARY.md  COMPLETE_PROGRESS_SUMMARY.md  FINAL_PROGRESS_SUMMARY.md  FINAL_SUMMARY.md  PROGRESS_REVIEW.md  PROGRESS_REVIEW_FINAL.md  PROGRESS_SUMMARY_SEC.md  README.md  RELEASE_COMPLETE.md  RELEASE_NOTES.md  REPOSITORY_STATUS.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md  TUTORIALS.md  USER_GUIDE.md  api.md  index.md  migration.md  release-process.md  security-audit-report.md  v0.2.0-release.md
docs/developer/: contributing.md
docs/phases/: GITHUB_ISSUES_SUMMARY.md  README.md  milestones.json  phase-1-cicd-pipeline-alignment.md  phase-1-comprehensive-test-coverage.md  phase-2-documentation-completeness.md  phase-2-release-automation.md  phase-3-docs-infrastructure.md  phase-3-security-hardening.md  phase-4-packaging-optimization.md  phase-4-precommit-security-baseline.md  phase-5-performance-benchmarks.md  phase-6-user-guides-and-examples.md  phase-7-release-process-validation.md  phase-8-pre-release-preparation.md  update-github-issues.md
docs/review/: senior-review.md
docs/specs/: backend.md
docs/user/: audio-features.md  cli-guide.md  faq.md  getting-started.md  python-api.md  text-reading.md  troubleshooting.md
examples/: README.md  async_context.py  basic_synthesis.py  custom_provider.py  event_handling.py  file_reading.py  streaming.py  with_ui.py
examples/advanced/: audio_pipeline.py  custom_provider.py
examples/basic/: basic_audio_export.py  basic_cli.py  basic_reading.py  basic_synthesis.py
examples/integration/: automation_script.py  web_integration.py
examples/use_cases/: accessibility_tool.py
migration/: index.html
phases/: index.html
phases/GITHUB_ISSUES_SUMMARY/: index.html
phases/phase-1-cicd-pipeline-alignment/: index.html
phases/phase-1-comprehensive-test-coverage/: index.html
phases/phase-2-documentation-completeness/: index.html
phases/phase-2-release-automation/: index.html
phases/phase-3-docs-infrastructure/: index.html
phases/phase-3-security-hardening/: index.html
phases/phase-4-packaging-optimization/: index.html
phases/phase-4-precommit-security-baseline/: index.html
phases/phase-5-performance-benchmarks/: index.html
phases/phase-6-user-guides-and-examples/: index.html
phases/phase-7-release-process-validation/: index.html
phases/phase-8-pre-release-preparation/: index.html
phases/update-github-issues/: index.html
review/senior-review/: index.html
scripts/: update-github-issues.sh  validate_release.sh
search/: search_index.json
specs/backend/: index.html
src/champi_tts/: __init__.py  factory.py
src/champi_tts/cli/: __init__.py  main.py
src/champi_tts/core/: __init__.py  audio.py  audio_effects.py  base_config.py  base_provider.py  base_synthesizer.py  config_validation.py
src/champi_tts/providers/: __init__.py
src/champi_tts/providers/kokoro/: __init__.py  adapter.py  config.py  enums.py  events.py  exceptions.py  inference.py  models.py  provider.py  text_utils.py  voice_manager.py
src/champi_tts/providers/kokoro/cli/: kokoro_console_textual.py
src/champi_tts/providers/kokoro/voices/: README.txt
src/champi_tts/reader/: __init__.py  service.py
src/champi_tts/ui/: __init__.py  tts_indicator_ui.py
tests/: conftest.py  test_performance.py  test_security.py
tests/test_core/: test_audio_core.py  test_audio_effects.py  test_base_classes.py  test_config_validation.py  test_factory.py
tests/test_integration/: conftest.py  test_audio_integration.py  test_full_workflow.py  test_ui_integration.py
tests/test_providers/: test_kokoro_config.py  test_kokoro_enums.py  test_kokoro_exceptions.py  test_voice_manager.py
tests/test_reader/: __init__.py  test_service.py
user/audio-features/: index.html
user/cli-guide/: index.html
user/faq/: index.html
user/getting-started/: index.html
user/python-api/: index.html
user/text-reading/: index.html
user/troubleshooting/: index.html
v0.2.0-release/: index.html
