[metadata]
name = champi-tts
version = attr: champi_tts.__version__
author = Divagnz
author-email = oscar.liguori.bagnis@gmail.com
description = Multi-provider text-to-speech library with voice reading features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/divagnz/champi-tts
license = MIT
license-files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = find:
package-dir =
    src = src
python_requires = >=3.12
install_requires =
    numpy
    sounddevice
    soundfile
    loguru
    blinker>=1.9.0
    champi-signals

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    champi-tts = champi_tts.cli:main

[options.extras_require]
kokoro =
    torch
    torchaudio
    kokoro
    misaki[en,ja,ko,zh]
    espeak-phonemizer
    phonemizer-fork
    unidecode
    inflect
    text2num
    awaitlet>=0.0.1
    scipy

ui =
    imgui-bundle
    pyglm

cli =
    typer>=0.16.0
    rich>=14.0.0
    click>=8.0.0

all = champi-tts[kokoro,ui,cli]

dev =
    champi-tts[all]
    build
    twine
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    pytest-mock
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    commitizen>=3.0.0
    bandit[toml]>=1.7.0
    detect-secrets>=1.4.0
    uv
    uv-build>=0.7.21
    hatching

test =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    coverage

[options.coverage]
run = source = src
branch = True
source_pkgs = champi_tts

[options.mypy]
python_version = 3.12
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
warn_no_return = True
strict_equality = True

[bdist_wheel]
universal = 0